examples/test/testpolicy3333.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3333
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key7: value45
      key40: value18
      key0: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value5
      podSelector:
        matchLabels:
          key32: value26
          key45: value22
          key44: value22
